add html divs, header and footer

--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link ref="stylesheet" href="./style.css">
-    <link ref="stylesheet" href="https://fonts.googleapis.com/css?family=">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=">
     <script src="./script.js"></script>
     <title>Etch-A-Sketch</title>
 </head>
 <body>
-    
+    <div class="header">
+        <h1>Come Etch-A-Sketch</h1>
+    </div>
+    <div class="main">
+        <div class="sketch">
+
+        </div>
+        <div class="buttons">
+            
+        </div>
+    </div>
+    <footer> by Puzzle Fxr</footer>
 </body>
 </html>
