add text style, add basic ui

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Tektur&display=swap">
     <script src="./script.js"></script>
     <title>Etch-A-Sketch</title>
 </head>
@@ -12,14 +12,20 @@
     <div class="header">
         <h1>Come Etch-A-Sketch</h1>
     </div>
-    <div class="main">
-        <div class="sketch">
+    <div class="container">
+        <div class="main">
+            <div class="sketch">
 
+            </div>
+            <div class="settings">
+                <button class="button" id="pen">Pen</button>
+                <button class="button" id="eraser">Eraser</button>
+                <button class="button" id="color">Color</button>
+                <button class="button" id="size">Size</button>
+                <button class="button" id="clear">Clear</button>
+            </div>
         </div>
-        <div class="buttons">
-            
-        </div>
-    </div>
+    </div>    
     <footer> by Puzzle Fxr</footer>
 </body>
 </html>
