--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Come Etch-A-Sketch</h1>
+        <h1>Lets Etch-A-Sketch</h1>
     </div>
     <div class="container">
         <div class="main">
