change unit from px to mm, changed footer position in html, wrote function for grid size

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Tektur&display=swap">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
     <title>Etch-A-Sketch</title>
 </head>
 <body>
@@ -26,6 +26,6 @@
             </div>
         </div>
     </div>    
-    <footer> by Puzzle Fxr</footer>
 </body>
+<footer> by Puzzle Fxr</footer>
 </html>
